发送消息 更新

--- a/app/rem.html
+++ b/app/rem.html
@@ -147,7 +147,7 @@
     </div>
 </div>
 <script src="vendor/jquery/jquery.min.js"></script>
-<script src="http://www.ofmonkey.com/Assets/js/format/jquery-extend.js"></script>
+<script src="jquery-extend.js"></script>
 <script>
     var error = function (msg) {
         alert(msg);
