活动优惠券

--- a/app/index.html
+++ b/app/index.html
@@ -20,10 +20,8 @@
     <script type="text/javascript" src="vendor/zeroclipboard/dist/ZeroClipboard.js"></script>
     <!--由于百度的edtior 不能使用require 无痛加载 所以使用阻塞加载方式 -->
     <script type="text/javascript" src="vendor/ueditor/ueditor.config.js"></script>
-    <script type="text/javascript" src="vendor/ueditor/ueditor.all.js"></script>
+    <script type="text/javascript" src="vendor/ueditor/ueditor.all.min.js"></script>
     <script type="text/javascript" src="vendor/ueditor/lang/zh-cn/zh-cn.js"></script>
-    <script type="text/javascript"
-            src="https://api.map.baidu.com/api?v=2.0&ak=8wBktwVQM9GWdeP5ldMXogY48glg5sgD&s=1"></script>
 
 </head>
 <body>
@@ -41,5 +39,7 @@
 <div class="mod_http_msg ng-cloak" ng-show="http_notification">
     <span ng-bind="http_notification">加载中...</span>
 </div>
+<script type="text/javascript"
+        src="https://api.map.baidu.com/api?v=2.0&ak=8wBktwVQM9GWdeP5ldMXogY48glg5sgD&s=1"></script>
 </body>
 </html>
