老师录音功能！

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="vendor/ueditor/ueditor.config.js?1"></script>
     <script type="text/javascript" src="vendor/ueditor/ueditor.all.js?1"></script>
     <script type="text/javascript" src="vendor/ueditor/lang/zh-cn/zh-cn.js?1"></script>
+    <script type="text/javascript" src="scripts/recoder.js"></script>
 
 </head>
 <body>
