--- a/app/rem.html
+++ b/app/rem.html
@@ -72,7 +72,7 @@
             height: 70%;
             display: block;
             border-radius: 10px;
-            resize:none;
+            resize: none;
         }
 
         .center-tmp {
@@ -141,6 +141,7 @@
                     <div><input type="checkbox" checked="checked" id="chkIgnoreBorder">不处理border</input></div>
                     <div><a class="btn" id="btnToRem">转化为rem</a></div>
                     <div><a class="btn" id="btnToPx">转化为px</a></div>
+                    <div><a class="btn" id="oldTo">老版本转化</a></div>
                 </div>
             </div>
         </div>
@@ -153,6 +154,9 @@
         alert(msg);
     }
     $(function () {
+        $("#oldTo").click(function () {
+            location.href = 'https://m.ahaschool.com/calc.html';
+        });
         $("#btnToPx").click(function () {
             var text = $("#txtSource").val();
             var px = $("#txtRemIntalize").val();
