线上换域名  n.ahaschool.com

--- a/app/rem.html
+++ b/app/rem.html
@@ -155,7 +155,7 @@
     }
     $(function () {
         $("#oldTo").click(function () {
-            location.href = 'https://m.ahaschool.com/calc.html';
+            location.href = 'https://n.ahaschool.com/calc.html';
         });
         $("#btnToPx").click(function () {
             var text = $("#txtSource").val();
