--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
-    <title ng-bind="'Ahaschool '+env_name"></title>
+    <title ng-bind="'ahaschool '+env_name"></title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <link rel="icon" href="favicon2.ico" type="image/x-icon"/>
