--- a/app/index.html
+++ b/app/index.html
@@ -19,11 +19,11 @@
     <link rel="stylesheet" href="vendor/ueditor/third-party/codemirror/codemirror.css"/>
 
     <!--<link rel="stylesheet" href="vendor/ueditor/themes/default/css/ueditor.css">-->
-    <script type="text/javascript" src="vendor/zeroclipboard/dist/ZeroClipboard.js"></script>
+    <script type="text/javascript" src="vendor/zeroclipboard/dist/ZeroClipboard.min.js"></script>
     <!--由于百度的edtior 不能使用require 无痛加载 所以使用阻塞加载方式 -->
     <script type="text/javascript" src="vendor/ueditor/third-party/codemirror/codemirror.js?1"></script>
     <script type="text/javascript" src="vendor/ueditor/ueditor.config.js?1"></script>
-    <script type="text/javascript" src="vendor/ueditor/ueditor.all.js?1"></script>
+    <script type="text/javascript" src="vendor/ueditor/ueditor.all.min.js?1"></script>
     <script type="text/javascript" src="vendor/ueditor/lang/zh-cn/zh-cn.js?1"></script>
     <script type="text/javascript" src="scripts/recoder.js"></script>
 
