--- a/app/a.html
+++ b/app/a.html
@@ -3,32 +3,32 @@
     <script type="text/javascript">
         function getCookie(c_name) {
             if (document.cookie.length > 0) {
-                c_start = document.cookie.indexOf(c_name + "=")
-                if (c_start != -1) {
+                var c_start = document.cookie.indexOf(c_name + "=")
+                if (c_start !== -1) {
                     c_start = c_start + c_name.length + 1
-                    c_end = document.cookie.indexOf(";", c_start)
-                    if (c_end == -1) c_end = document.cookie.length
+                    var c_end = document.cookie.indexOf(";", c_start)
+                    if (c_end === -1) c_end = document.cookie.length
                     return unescape(document.cookie.substring(c_start, c_end))
                 }
             }
             return ""
         }
 
-        function setCookie(c_name, value, expiredays) {
-            var exdate = new Date()
-            exdate.setDate(exdate.getDate() + expiredays)
+        function setCookie(c_name, value, expire_days) {
+            var ex_date = new Date()
+            ex_date.setDate(ex_date.getDate() + expire_days)
             document.cookie = c_name + "=" + escape(value) +
-                    ((expiredays == null) ? "" : ";expires=" + exdate.toGMTString())
+                ((expire_days == null) ? "" : ";expires=" + ex_date.toGMTString())
         }
 
         function checkCookie() {
-            username = getCookie('username')
-            if (username != null && username != "") {
+            var username = getCookie('username')
+            if (username !== null && username !== "") {
                 alert('Welcome again ' + username + '!')
             }
             else {
                 username = prompt('Please enter your name:', "")
-                if (username != null && username != "") {
+                if (username !== null && username !== "") {
                     setCookie('username', username, 365)
                 }
             }
