--- a/app/download.html
+++ b/app/download.html
@@ -95,9 +95,25 @@
         }
 
     </style>
+    <style>
+        .btn{
+            margin: 15px;
+            padding: 5px 25px;
+            border: 1px #6e6e6e solid;
+            border-radius: 5px;
+            display: inline-block;
+            cursor: pointer;
+            text-decoration: none;
+            color: cadetblue;
+            background-color: #eee;
+        }
+    </style>
 </head>
 
 <body>
+<a href="./record.html" class="btn">record</a>
+<a onclick="window.open('./record.html');" href="javascript:void(0);return false;" class="btn">record open </a>
+
 <div class="cl-fix" id="container">
     <div class="top">
         <div class="bgitem ">
@@ -157,41 +173,43 @@
 
 <script>
     /* rem adjust */
-    !function (a, b, c) {
+    !function(a, b, c) {
         if (window['__adjust_rem_flag']) {
             return;
         }
         ;
         window['__adjust_rem_flag'] = 1;
+
         function q() {
             var d = Math.min((o ? e[h]().width : f.innerWidth) / (a / b), c);
-            d != p && (k.innerHTML = "html{font-size:" + d + "px!important;" + n + "}", p = d)
+            d != p && (k.innerHTML = 'html{font-size:' + d + 'px!important;' + n + '}', p = d);
         }
 
         function r() {
-            clearTimeout(l), l = setTimeout(q, 500)
+            clearTimeout(l), l = setTimeout(q, 500);
         }
 
-        var l, d = document, e = d.documentElement, f = window, g = "addEventListener", h = "getBoundingClientRect", i = "pageshow", j = d.head || d.getElementsByTagName("HEAD")[0], k = d.createElement("STYLE"), m = "text-size-adjust:100%;", n = "-webkit-" + m + "-moz-" + m + "-ms-" + m + "-o-" + m + m, o = h in e, p = null;
-        a = a || 320, b = b || 16, c = c || 32, j.appendChild(k), d[g]("DOMContentLoaded", q, !1), "on" + i in f ? f[g](i, function (a) {
-            a.persisted && r()
-        }, !1) : f[g]("load", r, !1), f[g]("resize", r, !1), q()
+        var l, d = document, e = d.documentElement, f = window, g = 'addEventListener', h = 'getBoundingClientRect', i = 'pageshow', j = d.head || d.getElementsByTagName('HEAD')[0],
+            k = d.createElement('STYLE'), m = 'text-size-adjust:100%;', n = '-webkit-' + m + '-moz-' + m + '-ms-' + m + '-o-' + m + m, o = h in e, p = null;
+        a = a || 320, b = b || 16, c = c || 32, j.appendChild(k), d[g]('DOMContentLoaded', q, !1), 'on' + i in f ? f[g](i, function(a) {
+            a.persisted && r();
+        }, !1) : f[g]('load', r, !1), f[g]('resize', r, !1), q();
     }(320, 10, 100);
     /**/
-    require(['jquery'], function ($) {
+    require(['jquery'], function($) {
         if (Hjm.Utils.isWeChat()) {
-            require(['wechat'], function (Wechat) {
+            require(['wechat'], function(Wechat) {
                 Wechat.menuShare({
                     title: 'Ocamera--第一款极简美学相机',
                     desc: '极简圆形巧妙构图，张张即大片~',
-                    link: Env.wwwDomain + 'download.html'
+                    link: Env.wwwDomain + 'download.html',
                 });
             });
         }
 
         var btns = $('.btn');
 
-        btns.off().on('click', function (e) {
+        btns.off().on('click', function(e) {
 
             var _ua = '';
 
@@ -203,7 +221,7 @@
             if (Hjm.Utils.isWeChat()) {
                 //layer.style.display = 'block';
                 window.location = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.qinlin.zhibo';
-            } else if (_ua.match("weibo")) {
+            } else if (_ua.match('weibo')) {
                 $('#layer').show();
             } else {
                 if (_id == 'btn_ios') {
@@ -216,7 +234,7 @@
                     window.location = _url;
                 }
             }
-        })
+        });
     });
 
 
@@ -226,9 +244,9 @@
 <script type='text/javascript'>
     var _vds = _vds || [];
     window._vds = _vds;
-    (function () {
+    (function() {
         _vds.push(['setAccountId', 'a1ede70f4812df63']);
-        (function () {
+        (function() {
             var vds = document.createElement('script');
             vds.type = 'text/javascript';
             vds.async = true;
