--- a/app/record.html
+++ b/app/record.html
@@ -1,63 +1,82 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui"/>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no, email=no">
     <title></title>
+    <style>
+        .btn {
+            margin: 15px;
+            padding: 5px 25px;
+            border: 1px #6e6e6e solid;
+            border-radius: 5px;
+            display: inline-block;
+            cursor: pointer;
+            text-decoration: none;
+            color: cadetblue;
+            background-color: #eee;
+        }
+    </style>
 </head>
 <body>
-    <div>
-        <audio controls autoplay></audio>
-        <input onclick="startRecording()" type="button" value="录音" />
-        <input onclick="stopRecording()" type="button" value="停止" />
-        <input onclick="playRecording()" type="button" value="播放" />
-        <input onclick="uploadAudio()" type="button" value="提交" />
-    </div>
+<a href="./download.html" class="btn">download</a>
+<a onclick="window.open('./download.html');" href="javascript:void(0);return false;" class="btn">download open </a>
 
-    <script type="text/javascript" src="HZRecorder.js"></script>
+<div>
+    <audio controls autoplay></audio>
+    <input onclick="startRecording()" type="button" value="录音"/>
+    <input onclick="stopRecording()" type="button" value="停止"/>
+    <input onclick="playRecording()" type="button" value="播放"/>
+    <input onclick="uploadAudio()" type="button" value="提交"/>
+</div>
+
+<script type="text/javascript" src="HZRecorder.js"></script>
 
 
-    <script>
+<script>
 
-        var recorder;
+    var recorder;
 
-        var audio = document.querySelector('audio');
+    var audio = document.querySelector('audio');
 
-        function startRecording() {
-            HZRecorder.get(function (rec) {
-                recorder = rec;
-                recorder.start();
-            });
-        }
+    function startRecording() {
+        HZRecorder.get(function(rec) {
+            recorder = rec;
+            recorder.start();
+        });
+    }
 
-        function stopRecording() {
-            recorder.stop();
-        }
+    function stopRecording() {
+        recorder.stop();
+    }
 
-        function playRecording() {
-            recorder.play(audio);
-        }
+    function playRecording() {
+        recorder.play(audio);
+    }
 
-        function uploadAudio() {
-            recorder.upload("Handler1.ashx", function (state, e) {
-                switch (state) {
-                    case 'uploading':
-                        //var percentComplete = Math.round(e.loaded * 100 / e.total) + '%';
-                        break;
-                    case 'ok':
-                        //alert(e.target.responseText);
-                        alert("上传成功");
-                        break;
-                    case 'error':
-                        alert("上传失败");
-                        break;
-                    case 'cancel':
-                        alert("上传被取消");
-                        break;
-                }
-            });
-        }
+    function uploadAudio() {
+        recorder.upload('Handler1.ashx', function(state, e) {
+            switch (state) {
+                case 'uploading':
+                    //var percentComplete = Math.round(e.loaded * 100 / e.total) + '%';
+                    break;
+                case 'ok':
+                    //alert(e.target.responseText);
+                    alert('上传成功');
+                    break;
+                case 'error':
+                    alert('上传失败');
+                    break;
+                case 'cancel':
+                    alert('上传被取消');
+                    break;
+            }
+        });
+    }
 
-    </script>
+</script>
 
 </body>
 </html>
